--- a/style.css
+++ b/style.css
@@ -26,96 +26,97 @@ color: #1e053c;
     min-height: 100px;
     transform: translate(-50%,-50%);
 }
-#newtask{
-    position: relative;
-    padding: 30px 20px;
-}
-#newtask input{
-    width: 75%;
-    height: 45%;
-    padding: 12px;
-    color: #2d124e;
-    font-weight: 500;
-    position: relative;
-    border-radius: 5px;
-    font-family: sans-serif;
-    font-size: 15px;
-    border: 2px solid #4a1789;
-}
-#newtask input :focus{
-    outline: none;
-    border-color: #411479;
-}
-#newtask button{
-    position: relative;
-    float: right;
-    font-weight: 500;
-    font-size: 16px;
-    background-color: #1e053c;
-    border: none;
-    color: #9e6bdc;
-    cursor: pointer;
-    outline: none;
-    width: 20%;
-    height: 45px;
-    border-radius: 5px;
-    font-family: sans-serif;
-}
-.task{
-    position: absolute;
-    border-radius: 0px;
-    width: 100%;
-    background-color: #230e3d;
-    padding: 30px 20px;
-    margin-top: 0px;
-    justify-content: space-between;
-}
-.tasks.overflow{
-    overflow-y: auto;
-    max-height: 300px;
-}
-.tasks::-webkit-scrollbar{
-    width: 10px;
-}
-.tasks::-webkit-scrollbar-track{
-    background: #411479;
-    border-radius: 25px;
-}
-.tasks::-webkit-scrollbar-thumb{
-    background: #230e3d;
-    border-radius: 25px;
-}
-.task{
-    border-radius: 5px;
-    align-items: center;
-    justify-content: space-between;
-    cursor: pointer;
-    height: 50px;
-    margin-bottom: 8px;
-    padding: 10px 10px;
-    display: flex;
-    width: 100%;
-}
-.delete{
-    right: -5px;
-    padding: 5px 5px;
-    background: #411479;
-    border-radius: 4px;
-    transform-origin: top right;
-    box-shadow: 0 0 6px #ae85e0;
-    transition: transform 0.2s ease;
-    z-index: 10;
-}
-#check-task{
-    margin-right: 20px;
-}
-.task label{
-    font-family: sans-serif;
-    font-size: 15px;
-    font-weight: 400;
-    display: flex;
-    align-items: flex-start;
-}
-.task label p.checked{
-    text-decoration: line-through;
-}
+   #newtask{
+       position: relative;
+       padding: 30px 20px;
+   }
+   #newtask input{
+       width: 75%;
+       height: 45%;
+       padding: 12px;
+       color: #2d124e;
+       font-weight: 500;
+       position: relative;
+       border-radius: 5px;
+       font-family: sans-serif;
+       font-size: 15px;
+       border: 2px solid #4a1789;
+   }
+   #newtask input :focus{
+       outline: none;
+       border-color: #411479;
+   }
+   #newtask button{
+       position: relative;
+       float: right;
+       font-weight: 500;
+       font-size: 16px;
+       background-color: #1e053c;
+       border: none;
+       color: #9e6bdc;
+       cursor: pointer;
+       outline: none;
+       width: 20%;
+       height: 45px;
+       border-radius: 5px;
+       font-family: sans-serif;
+   }
+   .task{
+       position: absolute;
+       border-radius: 0px;
+       width: 100%;
+       background-color: #230e3d;
+       padding: 30px 20px;
+       margin-top: 0px;
+       justify-content: space-between;
+   }
+   .tasks.overflow{
+       overflow-y: auto;
+       max-height: 300px;
+   }
+   .tasks::-webkit-scrollbar{
+       width: 10px;
+       }
+      .tasks::-webkit-scrollbar-track{
+          background: #411479;
+          border-radius: 25px;
+      }
+      .tasks::-webkit-scrollbar-thumb{
+          background: #230e3d;
+          border-radius: 25px;
+      }
+      .task{
+          border-radius: 5px;
+          align-items: center;
+          justify-content: space-between;
+          cursor: pointer;
+          height: 50px;
+          margin-bottom: 8px;
+          padding: 10px 10px;
+          display: flex;
+          width: 100%;
+      }
+      .delete{
+          right: -5px;
+          padding: 5px 5px;
+          background: #411479;
+          border-radius: 4px;
+          transform-origin: top right;
+          box-shadow: 0 0 6px #ae85e0;
+          transition: transform 0.2s ease;
+          z-index: 10;
+      }
+      #check-task{
+          margin-right: 20px;
+      }
+      .task label{
+          font-family: sans-serif;
+          font-size: 15px;
+          font-weight: 400;
+          display: flex;
+          align-items: flex-start;
+      }
+      .task label p.checked{
+          text-decoration: line-through;
+      }
+      .task label input{margin-top: 3px;}
